--- a/20.PROJECT 3 & AND CASE STUDY-Project.ipynb
+++ b/20.PROJECT 3 & AND CASE STUDY-Project.ipynb
@@ -131,6 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing required Libraries\n",
     "import sqlite3\n",
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -364,6 +365,7 @@
     }
    ],
    "source": [
+    "#5 Row printing from dataset\n",
     "df.head(5)"
    ]
   },
@@ -451,6 +453,7 @@
     }
    ],
    "source": [
+    "# Selecting the name column Value\n",
     "pd.read_sql_query(\"SELECT name FROM sqlite_master WHERE type='table'\",cnx)"
    ]
   },
@@ -471,6 +474,7 @@
     }
    ],
    "source": [
+    "#Finding dataype\n",
     "df.dtypes.unique()"
    ]
   },
@@ -791,6 +795,7 @@
     }
    ],
    "source": [
+    "#Describing the dataset\n",
     "df.describe()"
    ]
   },
@@ -808,6 +813,7 @@
     }
    ],
    "source": [
+    "#Column Name\n",
     "cursor = cnx.cursor()\n",
     "cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
     "print(cursor.fetchall())"
@@ -830,6 +836,7 @@
     }
    ],
    "source": [
+    "#Getting the shape of dataset\n",
     "df.shape"
    ]
   },
@@ -860,6 +867,7 @@
     }
    ],
    "source": [
+    "#All avaible index\n",
     "df.keys()"
    ]
   },
@@ -890,6 +898,7 @@
     }
    ],
    "source": [
+    "#Getting Column Name\n",
     "df.columns"
    ]
   },
@@ -1210,6 +1219,7 @@
     }
    ],
    "source": [
+    "# Describing Dataset\n",
     "df.describe()"
    ]
   },
@@ -1282,6 +1292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Droping NA\n",
     "df = df.dropna()"
    ]
   },
@@ -2565,6 +2576,7 @@
     }
    ],
    "source": [
+    "#casting the Column\n",
     "df['overall_rating'] = df['overall_rating'].astype('int')\n",
     "df.corr(method='pearson',min_periods=1).transpose().sort_values('overall_rating', ascending=False)"
    ]
@@ -3973,6 +3985,7 @@
     }
    ],
    "source": [
+    "#Casting the Column\n",
     "df['overall_rating'] = df['overall_rating'].astype('int')\n",
     "display(df.sort_values('overall_rating', ascending=False).head(10)[['overall_rating', 'reactions', 'potential', 'short_passing', 'long_passing','ball_control', 'vision', 'shot_power']])"
    ]
@@ -3994,6 +4007,7 @@
     }
    ],
    "source": [
+    "# Creating the Copy \n",
     "feature_columns = ['reactions', 'potential']\n",
     "X = df[feature_columns]\n",
     "y = df.overall_rating\n",
@@ -4015,6 +4029,7 @@
     }
    ],
    "source": [
+    "#Printing the Score\n",
     "print(lm.intercept_)"
    ]
   },
@@ -4032,6 +4047,7 @@
     }
    ],
    "source": [
+    "#Printing the Coef Value\n",
     "print(lm.coef_)"
    ]
   },
@@ -4041,6 +4057,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Libries\n",
     "from matplotlib.pyplot import figure\n",
     "import  matplotlib.pyplot as plt"
    ]
@@ -4062,6 +4079,7 @@
     }
    ],
    "source": [
+    "#Ploting the data value\n",
     "figure(num=None, figsize=(12,10), facecolor='G', edgecolor='G')\n",
     "plt.scatter(df.reactions, df.overall_rating)\n",
     "plt.xlabel('Player Reaction')\n",
@@ -4087,6 +4105,7 @@
     }
    ],
    "source": [
+    "#Ploting the data value\n",
     "figure(num=None, figsize=(12,10), facecolor='w', edgecolor='B')\n",
     "plt.scatter(df.potential, df.overall_rating)\n",
     "plt.xlabel('Player Potential')\n",
@@ -4202,6 +4221,7 @@
     }
    ],
    "source": [
+    "#Printing the OLS Regression Result\n",
     "import statsmodels.formula.api as smf\n",
     "lm = smf.ols(formula='overall_rating ~ reactions + potential', data=df).fit()\n",
     "lm.conf_int()\n",
@@ -4224,6 +4244,7 @@
     }
    ],
    "source": [
+    "#Ploting the data value\n",
     "feature_columns = ['overall_rating', 'reactions', 'potential', 'short_passing', 'long_passing','ball_control', 'vision', 'shot_power']\n",
     "X = df[feature_columns]\n",
     "y = df.overall_rating\n",
@@ -4361,6 +4382,8 @@
     }
    ],
    "source": [
+    "#Printing the OLS Regression Result\n",
+    "\n",
     "lm = smf.ols(formula='overall_rating ~ reactions + potential + short_passing + long_passing + ball_control + vision + shot_power', data=df).fit()\n",
     "#display(lm.rsquared)\n",
     "#display(lm.resid)\n",
